# simavr-ffi

./: .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  shell.nix
patches/: twi-inconsistencies.patch
src/: lib.rs
